<resources>
    <string name="app_name">SimpleApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bienvenido</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="simpleapp">SimpleApp</string>
    <string name="menu_home">Home</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="inicia_sesi_n">Inicia sesión</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registrate">Regístrate</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="google">Google</string>
    <string name="prefs_file">com.example.test.PREFERENCE_FILE_KEY</string>
    <string name="logsucc">Login Successful</string>
    <string name="nombre">Nombre</string>
    <string name="nombreLocal">Nombre del local</string>
    <string name="name">Name</string>
    <string name="perfil">Perfil</string>
    <string name="agregarLocal">Agregar local</string>
    <string name="mapa">Mapa</string>
    <string name="apellido">Apellido</string>
    <string name="contacto">Web o telefono</string>
    <string name="rubro">Rubro</string>
    <string name="horario">Horario</string>
    <string name="casa_calle_barrio">Casa, calle, barrio</string>
    <string name="direccion">Dirección</string>
    <string name="guardar">Guardar</string>
    <string name="ingresa">Ingresa una dirección</string>
    <string name="recuperar">Recuperar</string>
    <string name="avatar">Avatar</string>
    <string name="editarp">Editar perfil</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_menu">menuActivity</string>
    <string name="no_tenes_cuenta">No tenes cuenta?</string>
    <string name="todo">TODO</string>
    <string name="back">Back</string>
    <string name="elegir_en_el_mapa">Elegir en el mapa</string>
    <string name="search">search</string>
    <string name="api_key">AIzaSyC_ACert12Urti9TGrhH9h7mf5Ltt6OeEY</string>
</resources>