<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <TextView
        android:id="@+id/text_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AuthActivity"
        tools:layout_editor_absoluteX="-81dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/editarTextView"
            android:layout_width="221dp"
            android:layout_height="39dp"
            android:text="@string/editarp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.069" />

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="189dp"
            android:layout_height="40dp"
            android:text="@string/email"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.421" />

        <EditText
            android:id="@+id/nameTextView"
            android:layout_width="189dp"
            android:layout_height="40dp"
            android:autofillHints=""
            android:hint="@string/nombre"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/btnLogout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.573" />

        <EditText
            android:id="@+id/apellidoTextView"
            android:layout_width="189dp"
            android:layout_height="40dp"
            android:autofillHints=""
            android:hint="@string/apellido"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/btnLogout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.672" />

        <EditText
            android:id="@+id/addressTextView"
            android:layout_width="189dp"
            android:layout_height="40dp"
            android:autofillHints=""
            android:hint="@string/casa_calle_barrio"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.662" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:text="@string/cerrar_sesion"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.942" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:text="@string/guardar"
            app:backgroundTint="#FF5722"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.814" />

        <ImageButton
            android:id="@+id/btnImage"
            android:layout_width="105dp"
            android:layout_height="106dp"
            android:background="@drawable/ic_edit_profile"
            android:contentDescription="@string/avatar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.201" />

        <ProgressBar
            android:id="@+id/progressbarPic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:visibility="invisible"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>